2015-06-15  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2414: CFLAGS, CXXFLAGS and LDFLAGS should be
	passed to OpenJDK build
	* Makefile.am:
	(ICEDTEA_CONFIGURE): Pass --with-extra-cflags,
	--with-extra-cxxflags and --with-extra-ldflags,
	using CFLAGS, CXXFLAGS and LDFLAGS values
	held by make.
	* NEWS: Updated.

2015-06-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* Makefile.am:
	(CORBA_CHANGESET): Update to icedtea-3.0.0pre04 tag.
	(JAXP_CHANGESET): Likewise.
	(JAXWS_CHANGESET): Likewise.
	(JDK_CHANGESET): Likewise.
	(LANGTOOLS_CHANGESET): Likewise.
	(OPENJDK_CHANGESET): Likewise.
	(NASHORN_CHANGESET): Likewise.
	(CORBA_SHA256SUM): Likewise.
	(JAXP_SHA256SUM): Likewise.
	(JAXWS_SHA256SUM): Likewise.
	(JDK_SHA256SUM): Likewise.
	(LANGTOOLS_SHA256SUM): Likewise.
	(OPENJDK_SHA256SUM): Likewise.
	(NASHORN_SHA256SUM): Likewise.
	* NEWS: Updated.
	* configure.ac: Bump to 3.0.0pre04.
	* hotspot.map: Update to icedtea-3.0.0pre04 tag.

2014-09-16  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2411: Fix references to hotspot.map following PR2001
	* Makefile.am:
	(HS_TYPE): Fix hotspot.map path.
	(HS_URL): Likewise.
	(HS_CHANGESET): Likewise.
	(HS_SHA256SUM): Likewise.
	(EXTRA_DIST): Remove hotspot.map.
	hotspot.map.in is automatically added
	by autoconf.
	* NEWS: Updated.

2014-05-01  Andrew John Hughes  <gnu.andrew@member.fsf.org>

	PR2410: Support PPC64 JIT on ppc64le
	* AUTHORS: Add Tiago.
	* NEWS: Updated.
	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Expand ppc64le to its
	own block to avoid potential future collisions.

2014-05-01  Tiago Sturmer Daitx  <tdaitx@linux.vnet.ibm.com>

	PR2410: Support PPC64 JIT on ppc64le
	* acinclude.m4:
	(IT_SET_ARCH_SETTINGS): Support ppc64le.

2015-06-08  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2409: Update Zero macro to match one in IcedTea 2.x
	* NEWS: Updated.

2012-07-25  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	PR2409: Update Zero macro to match one in IcedTea 2.x
	* Makefile.am: